# ai-discord-bot

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 573717537f79_creating_conversationhistory.py
app/: main.py
app/core/: settings.py
app/database/: connection.py  models.py  service.py
app/discord/: bot.py  commands.py  events.py  handler.py  utils.py
app/llm/: agent.py  mcps.py  prompts.py  utils.py
app/llm/tools/: github.py  tavily.py
